--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "express": "*",
     "jade": "*",
-    "mongojs": "*"
+    "mongojs": "*",
+    "fs": "*",
+    "html": "*",
+    "ejs": "*"
   }
 }
